2009-05-07  Brady Eidson  <beidson@apple.com>

        I hate myself for doing this, but need to fix that ChangeLog entry.

        * ChangeLog:

2009-05-07  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Darin Adler

        * html/HTMLParser.cpp: Use the correct style of BUILDING_ON_* for WebCore.
        * html/HTMLParser.h: Ditto

2009-05-07  David Hyatt  <hyatt@apple.com>

        Restore intrinsic margins to all form controls on Mac and Windows.  Some of this regressed in 43007
        when textareas were given explicit margins.  Some of it had already regressed earlier whenever intrinsic
        margins were turned off in themeWin.css.

        Reviewed by Beth Dakin.

        * css/html4.css:
        * css/themeWin.css:

2009-05-07  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler and Alexey Proskuryakov.

        <rdar://problem/6863795> Exception occurs in Mail when attempting to create signatures due to <head> element creation

        * dom/Document.cpp:
        (WebCore::Document::implicitClose): Check shouldCreateImplicitHead() before creating it.

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::handleError): Check shouldCreateImplicitHead() before creating it.
        (WebCore::HTMLParser::bodyCreateErrorCheck): Ditto.
        (WebCore::shouldCreateImplicitHead): For Tiger/Leopard when running under Mail, the implicit <head> shouldn't be created.
        * html/HTMLParser.h:
        (WebCore::shouldCreateImplicitHead): Inline implementation for non-Tiger/Leopard platforms

2009-05-07  Antony Sargent  <asargent@chromium.org>

        Reviewed by Darin Fisher.

        Fix a memory leak in V8EventListenerList::remove.

        https://bugs.webkit.org/show_bug.cgi?id=25618

        No new functionality so no new tests. 

        * bindings/v8/V8EventListenerList.cpp:
        (WebCore::V8EventListenerList::remove):

2009-05-07  Darin Fisher  <darin@chromium.org>

        Fix Chromium build bustage.
